added a link to post a new job under an employer
- uses link_to erb helper with a path built by the
new_employer_job_posting_path helper
- employer_id param for the url is provided by the employer's id
- Only able to post a job while only on an employer's detail page
because it's easier to provide the employer_id from there

--- a/app/views/employers/show.html.erb
+++ b/app/views/employers/show.html.erb
@@ -35,5 +35,6 @@
   <%= @employer.headquarters_address %>
 </p>
 
+<%= link_to 'Post a Job', new_employer_job_posting_path(employer_id: @employer.id)%>
 <%= link_to 'Edit', edit_employer_path(@employer) %> |
 <%= link_to 'Back', employers_path %>
