changed form_with to use scope and url opposed to model
- model job_posting generated a form with an a url action that
doesn't exist (job_postings/) after nesting job_posting resources
- changed the scope to still be a job posting, but made the url go
to helper employer_job_postings_path, which was provided by rails
- also changed the employer_id field to a hidden one where the
value is set to the employer.id passed to the form

--- a/app/views/job_postings/_form.html.erb
+++ b/app/views/job_postings/_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_with(model: job_posting, local: true) do |form| %>
+
+<%= form_with(scope: :job_posting, url: employer_job_postings_path) do |form| %>
   <% if job_posting.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(job_posting.errors.count, "error") %> prohibited this job_posting from being saved:</h2>
@@ -32,9 +33,9 @@
   </div>
 
   <div class="field">
-    <%= form.label :employer_id %>
-    <%= form.text_field :employer_id %>
-  </div>
+    
+    <%= form.hidden_field(:employer_id, value: employer.id) %>
+  </div> 
 
   <div class="actions">
     <%= form.submit %>
