changed links to use nested resource routes opposed previous ones
- Show, Edit, and Destroy links had to be changed because they
used routes from when :job_posting didn't have nested resources
- switched routes to nested resource equivalents using url and
path helpers with the employer_id and job_posting id passed as
url parameters (may not be necessary for Destroy link)
- added a link to creating a new employer as this page will be
the landing page (may move to seperate landing page)

--- a/app/views/job_postings/index.html.erb
+++ b/app/views/job_postings/index.html.erb
@@ -21,15 +21,15 @@
         <td><%= job_posting.position_desc %></td>
         <td><%= job_posting.location %></td>
         <td><%= job_posting.benefits %></td>
-        <td><%= job_posting.employer %></td>
-        <td><%= link_to 'Show', job_posting %></td>
-        <td><%= link_to 'Edit', edit_job_posting_path(job_posting) %></td>
-        <td><%= link_to 'Destroy', job_posting, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= job_posting.employer.name %></td>
+        <td><%= link_to 'Show', employer_job_posting_url(employer_id: job_posting.employer_id, id: job_posting.id) %></td>
+        <td><%= link_to 'Edit', edit_employer_job_posting_path(employer_id: job_posting.employer_id, id: job_posting.id) %></td>
+        <td><%= link_to 'Destroy', employer_job_posting_url(employer_id: job_posting.employer_id, id: job_posting.id), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New Job Posting', new_job_posting_path %>
+<%= link_to 'New Employer', new_employer_url %>
+<%# <%= link_to 'New Job Posting', new_employer_job_posting_path %>
