UX improvements involving display and navigation
- display:
  - page will serve as what the employer sees when they want to make
  a new job posting from their detail page
  - tells them which employer the post is under
- navigation:
  - back button returns to the employer's detail page, b/c they can
  only visit this page from the detail page.

--- a/app/views/job_postings/new.html.erb
+++ b/app/views/job_postings/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Job Posting</h1>
+<h1>New Job Posting for <%= @employer.name %> </h1>
 
-<%= render 'form', job_posting: @job_posting %>
+<%= render 'form', job_posting: @job_posting, employer: @employer %>
 
-<%= link_to 'Back', job_postings_path %>
+<%= link_to 'Back', employer_path(@employer) %>
