Navigation addition; fixed paths to work with nested and root routes
Navigation:
- added a link to the employer detail page that shows as the employer's
name (25)

Link path fixes:
- changed route of edit link to go to nested job_posting edit route
instead with the job_posting.id passed as a parameter (28)
- changed route of back link to go to root url instead of deprecated
job_postings_path (job_postings/) (29)

--- a/app/views/job_postings/show.html.erb
+++ b/app/views/job_postings/show.html.erb
@@ -22,8 +22,8 @@
 
 <p>
   <strong>Employer:</strong>
-  <%= @job_posting.employer %>
+  <%= link_to @job_posting.employer.name, employer_path(@job_posting.employer)%>
 </p>
 
-<%= link_to 'Edit', edit_job_posting_path(@job_posting) %> |
-<%= link_to 'Back', job_postings_path %>
+<%= link_to 'Edit', edit_employer_job_posting_path(@job_posting) %> |
+<%= link_to 'Back', root_path %>
