fixed link_to Rails url helpers to work w/ shallow nesting route change
- instead of manually setting url params for each url
I pass the job_posting, so Rails builds that part of the url for me
(all chgd lines)

- 'Show' link helper changed to job_posting_path b/c
employer_job_posting_url no longer exists

- 'Edit' link helper changed to edit_job_posting_url b/c
edit_job_posting_path no longer exists

- 'Destroy' link helper changed to job_posting b/c this + the method
:delete parameter tells Rails to build the correct request from the link

--- a/app/views/job_postings/index.html.erb
+++ b/app/views/job_postings/index.html.erb
@@ -35,13 +35,13 @@
         <%= job_posting.employer.name %>
       </td>
       <td>
-        <%= link_to 'Show', employer_job_posting_url(employer_id: job_posting.employer_id, id: job_posting.id) %>
+        <%= link_to 'Show', job_posting_url(job_posting) %>
       </td>
       <td>
-        <%= link_to 'Edit', edit_employer_job_posting_path(employer_id: job_posting.employer_id, id: job_posting.id) %>
+        <%= link_to 'Edit', edit_job_posting_url(job_posting) %>
       </td>
       <td>
-        <%= link_to 'Destroy', employer_job_posting_url(employer_id: job_posting.employer_id, id: job_posting.id), method: :delete, data: { confirm: 'Are you sure?' } %>
+        <%= link_to 'Destroy', job_posting, method: :delete, data: { confirm: 'Are you sure?' } %>
       </td>
     </tr>
     <% end %>
