Edit link fix, added comment creation/viewing for a job_posting
- link fix (30):
  - changed edit_employer_job_posting_ to edit_job_posting b/c
  the latter no longer exists

- Comment viewing (35 - 49):
  - Comment existence check (35 - 41)
     -- displays diff message depending on comments existing
     -- Message is displayed when empty (35 - 38)
     -- Header is displayed when populated (39 - 40)
  - Displaying comments takes place in each block which iterates
  over each comment and shows the title and body of  that comment
 (43 - 49)

- Comment creation (51 - 66)
  - consists of a form built using Rails form_with helper w/ an input
  for the title and body of the comment
  - action and form structure inferred from @job_posting and
  ...comments.new (51)
    -- order matters b/c it reflects the way the create route is nested
    under job_posting resources

--- a/app/views/job_postings/show.html.erb
+++ b/app/views/job_postings/show.html.erb
@@ -1,4 +1,6 @@
-<p id="notice"><%= notice %></p>
+<p id="notice">
+  <%= notice %>
+</p>
 
 <p>
   <strong>Position name:</strong>
@@ -22,8 +24,43 @@
 
 <p>
   <strong>Employer:</strong>
-  <%= link_to @job_posting.employer.name, employer_path(@job_posting.employer)%>
+  <%= link_to @job_posting.employer.name, employer_url(@job_posting.employer)%>
 </p>
 
-<%= link_to 'Edit', edit_employer_job_posting_path(@job_posting) %> |
+<%= link_to 'Edit', edit_job_posting_url(@job_posting) %> |
 <%= link_to 'Back', root_path %>
+
+<hr />
+
+<% if @job_posting.comments.empty? %>
+
+<p><strong>There are currently no comments for this post. Make one?</strong></p>
+
+<% else %>
+<h2> Comments: </h2>
+<% end %>
+
+<% @job_posting.comments.each do |comment| %>
+<p><strong>
+    <%= comment.title %></strong></p>
+<p>
+  <%= comment.body %>
+</p>
+<% end %>
+
+<%= form_with(model: [@job_posting, @job_posting.comments.new]) do |form| %>
+<div class="input-group">
+  <%= form.label :title %>
+  <%= form.text_field :title %>
+</div>
+
+<div class="input-group">
+  <%= form.label :body %>
+  <%= form.text_area :body %>
+</div>
+
+<div class="actions">
+  <%= form.submit %>
+</div>
+
+<% end %>
