--- a/app/views/job_postings/_new_with_unknown_employer_form.html.erb
+++ b/app/views/job_postings/_new_with_unknown_employer_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_with(scope: :job_posting, url: {action: "create_with_unknown_employer"}) do |form| %>
+<% if @admin %>
+<%= form_with(model: [:admin, job_posting], url: {action: "create_with_unknown_employer"}) do |form| %>
 <% if job_posting.errors.any? %>
 <div id="error_explanation">
     <h2>
@@ -41,4 +42,53 @@
 <div class="actions">
     <%= form.submit "Make new Job Posting"%>
 </div>
+<% end %>
+
+<% else %>
+
+<%= form_with(model: [:user, job_posting], url: {action: "create_with_unknown_employer"}) do |form| %>
+<% if job_posting.errors.any? %>
+<div id="error_explanation">
+    <h2>
+        <%= pluralize(job_posting.errors.count, "error") %> prohibited this job_posting from being saved:</h2>
+
+    <ul>
+        <% job_posting.errors.full_messages.each do |message| %>
+        <li>
+            <%= message %>
+        </li>
+        <% end %>
+    </ul>
+</div>
+<% end %>
+
+<div class="field">
+    <%= form.label :position_name %>
+    <%= form.text_field :position_name %>
+</div>
+
+<div class="field">
+    <%= form.label :position_desc %>
+    <%= form.text_field :position_desc %>
+</div>
+
+<div class="field">
+    <%= form.label :location %>
+    <%= form.text_field :location %>
+</div>
+
+<div class="field">
+    <%= form.label :benefits %>
+    <%= form.text_field :benefits %>
+</div>
+
+<div class="field">
+    <%= form.collection_select :employer_id, employers, :id, :name %>
+</div>
+
+<div class="actions">
+    <%= form.submit "Make new Job Posting"%>
+</div>
+<% end %>
+
 <% end %>
