--- a/app/views/job_postings/edit.html.erb
+++ b/app/views/job_postings/edit.html.erb
@@ -2,5 +2,14 @@
 
 <%= render 'form', job_posting: @job_posting %>
 
-<%= link_to 'Show', @job_posting %> |
-<%= link_to 'Back', job_postings_path %>
+<% if @admin %>
+
+<%= link_to 'Show', admin_job_posting_path(@job_posting) %> |
+<%= link_to 'Back', admin_job_postings_path %>
+
+<% else %>
+
+<%= link_to 'Show', user_job_posting_path(@job_posting) %> |
+<%= link_to 'Back', user_job_postings_path %>
+
+<% end %>
