fixed forms to have actions appropriate to the port
- admin form should go to admin_job_postings_create_path (2)
- user form should go to user_job_postings_create_path (49)
- changed model-url combo in form_with helper to scope-url combo
  - form action was not getting generated differently due to ruby
  action
  specification

--- a/app/views/job_postings/_new_with_unknown_employer_form.html.erb
+++ b/app/views/job_postings/_new_with_unknown_employer_form.html.erb
@@ -1,5 +1,5 @@
 <% if @admin %>
-<%= form_with(model: [:admin, job_posting], url: {action: "create_with_unknown_employer"}) do |form| %>
+<%= form_with(scope: :job_posting, url: admin_job_postings_create_path) do |form| %>
 <% if job_posting.errors.any? %>
 <div id="error_explanation">
     <h2>
@@ -46,7 +46,7 @@
 
 <% else %>
 
-<%= form_with(model: [:user, job_posting], url: {action: "create_with_unknown_employer"}) do |form| %>
+<%= form_with(scope: :job_posting, url: user_job_postings_create_path) do |form| %>
 <% if job_posting.errors.any? %>
 <div id="error_explanation">
     <h2>
