changed edit link of user side to route to edit job_posting url (53)

--- a/app/views/job_postings/index.html.erb
+++ b/app/views/job_postings/index.html.erb
@@ -50,7 +50,7 @@
         <%= link_to 'Show', user_job_posting_url(job_posting) %>
       </td>
       <td>
-        <%= link_to 'Edit', user_job_posting_url(job_posting) %>
+        <%= link_to 'Edit', edit_user_job_posting_url(job_posting) %>
       </td>
       <% end %>
 
