changed user port route from job_poostings to job_postings (4)

--- a/app/views/static_pages/landing.html.erb
+++ b/app/views/static_pages/landing.html.erb
@@ -1,4 +1,4 @@
 <h1>Hello Everyone!</h1>
 
 <a href="admin/job_postings">Admin Port</a>
-<a href="user/job_poostings">User Port</a>
+<a href="user/job_postings">User Port</a>
