--- a/app/views/employers/edit.html.erb
+++ b/app/views/employers/edit.html.erb
@@ -2,5 +2,12 @@
 
 <%= render 'form', employer: @employer %>
 
-<%= link_to 'Show', @employer %> |
-<%= link_to 'Back', employers_path %>
+<% if @admin %>
+<%= link_to 'Show', admin_employer_path(@employer) %> |
+<%= link_to 'Back', admin_employers_path %>
+
+<% else %>
+<%= link_to 'Show', user_employer_path(@employer) %> |
+<%= link_to 'Back', user_employers_path %>
+
+<% end %>
