--- a/app/views/employers/new.html.erb
+++ b/app/views/employers/new.html.erb
@@ -2,4 +2,12 @@
 
 <%= render 'form', employer: @employer %>
 
-<%= link_to 'Back', employers_path %>
+<% if @admin %>
+
+<%= link_to 'Back', admin_employers_path %>
+
+<% else %>
+
+<%= link_to 'Back', user_employers_path %>
+
+<% end %>
