used @admin conditional for showing links, removed employer alias
- @admin conditional:
  - if @admin is true, admin related helpers are used to generate link
  - else, user related helpers are used to generate link

- removal:
  - value was present in form, but edit never used or declared
  employer
  - just stuck to @employer, because app won't blow up if the
  instance var is never declared

--- a/app/views/job_postings/new.html.erb
+++ b/app/views/job_postings/new.html.erb
@@ -1,5 +1,12 @@
-<h1>New Job Posting for <%= @employer.name %> </h1>
+<h1>New Job Posting for
+    <%= @employer.name %>
+</h1>
 
-<%= render 'form', job_posting: @job_posting, employer: @employer %>
+<%= render 'form', job_posting: @job_posting %>
 
-<%= link_to 'Back', employer_path(@employer) %>
+<% if @admin %>
+<%= link_to 'Back', admin_employer_path(@employer) %>
+
+<% else %>
+<%= link_to 'Back', user_employer_path(@employer) %>
+<% end %>
