used @admin conditional for determining which links to show
- if @admin is true, admin related helpers are used to generate link
routes
- else user related helpers are used to generate link routes

--- a/app/views/employers/index.html.erb
+++ b/app/views/employers/index.html.erb
@@ -1,4 +1,6 @@
-<p id="notice"><%= notice %></p>
+<p id="notice">
+  <%= notice %>
+</p>
 
 <h1>Employers</h1>
 
@@ -18,22 +20,61 @@
 
   <tbody>
     <% @employers.each do |employer| %>
-      <tr>
-        <td><%= employer.name %></td>
-        <td><%= employer.company_desc %></td>
-        <td><%= employer.employee_count %></td>
-        <td><%= employer.logo_url %></td>
-        <td><%= employer.industry %></td>
-        <td><%= employer.founded_date %></td>
-        <td><%= employer.headquarters_address %></td>
-        <td><%= link_to 'Show', employer %></td>
-        <td><%= link_to 'Edit', edit_employer_path(employer) %></td>
-        <td><%= link_to 'Destroy', employer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+    <tr>
+      <td>
+        <%= employer.name %>
+      </td>
+      <td>
+        <%= employer.company_desc %>
+      </td>
+      <td>
+        <%= employer.employee_count %>
+      </td>
+      <td>
+        <%= employer.logo_url %>
+      </td>
+      <td>
+        <%= employer.industry %>
+      </td>
+      <td>
+        <%= employer.founded_date %>
+      </td>
+      <td>
+        <%= employer.headquarters_address %>
+      </td>
+
+      <% if @admin %>
+      <td>
+        <%= link_to 'Show', admin_employer_path(employer) %>
+      </td>
+      <td>
+        <%= link_to 'Edit', edit_admin_employer_path(employer) %>
+      </td>
+      <td>
+        <%= link_to 'Destroy', admin_employer_path(employer), method: :delete, data: { confirm: 'Are you sure?' } %>
+      </td>
+
+      <% else %>
+      <td>
+        <%= link_to 'Show', user_employer_path(employer) %>
+      </td>
+      <td>
+        <%= link_to 'Edit', edit_user_employer_path(employer) %>
+      </td>
+      <% end %>
+
+    </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
+<% if @admin %>
 
-<%= link_to 'New Employer', new_employer_path %>
+<%= link_to 'New Employer', new_admin_employer_path %>
+
+<% else %>
+
+<%= link_to 'New Employer', new_user_employer_path %>
+
+<% end %>
