--- a/app/views/job_postings/_form.html.erb
+++ b/app/views/job_postings/_form.html.erb
@@ -1,6 +1,6 @@
 <% if @admin %>
 
-<%= form_with(model: [:admin, job_posting]) do |form| %>
+<%= form_with(model: [:admin, @employer, job_posting].compact) do |form| %>
 <% if job_posting.errors.any? %>
 <div id="error_explanation">
   <h2>
@@ -36,9 +36,12 @@
   <%= form.text_field :benefits %>
 </div>
 
+
+
 <div class="field">
-  <%= form.hidden_field(:employer_id, value: job_posting.employer.id) %>
+  <%= form.hidden_field(:employer_id, value: params[:employer_id] || job_posting.employer_id ) %>
 </div>
+
 
 <div class="actions">
   <%= form.submit %>
@@ -47,7 +50,7 @@
 
 <% else %>
 
-<%= form_with(model: [:user, job_posting]) do |form| %>
+<%= form_with(model: [:user, @employer, job_posting].compact) do |form| %>
 <% if job_posting.errors.any? %>
 <div id="error_explanation">
   <h2>
@@ -84,7 +87,7 @@
 </div>
 
 <div class="field">
-  <%= form.hidden_field(:employer_id, value: job_posting.employer.id) %>
+  <%= form.hidden_field(:employer_id, value: params[:employer_id] || job_posting.employer_id) %>
 </div>
 
 <div class="actions">
