Included form used to sort job_postings displayed; no styling

--- a/app/views/job_postings/index.html.erb
+++ b/app/views/job_postings/index.html.erb
@@ -4,6 +4,26 @@
 
 <h1>Job Postings</h1>
 
+<form>
+  <div class="form-control">
+    <input type="radio" name="sort" id="N-O-sort-button" value="N-O">
+    <label for="N-O">Newest - Oldest Created</label>
+  </div>
+  <div class="form-control">
+    <input type="radio" name="sort" id="O-N-sort-button" value="O-N">
+    <label for="O-N">Oldest - Newest Created</label>
+  </div>
+  <div class="form-control">
+    <input type="radio" name="sort" id="Z-A-sort-button" value="A-Z">
+    <label for="A-Z">Alphabetically</label>
+  </div>
+  <div class="form-control">
+    <input type="radio" name="sort" id="Z-A-sort-button" value="Z-A">
+    <label for="Z-A">Reverse Alphabetically</label>
+  </div>
+  <input type="submit" value="Sort">
+</form>
+
 <table>
   <thead>
     <tr>
